# ai-cloud-scheduler

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AWS_COST_ALERTS_README.md  AWS_COST_ANALYSIS_README.md  CHANGELOG.md  CONTRIBUTING.md  Cloud_Advisor_PRD_Combined_v2.docx  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DATA_EXPLANATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dashboard  FEATURES_AND_CAPABILITIES.md  LICENSE  MIGRATION_FLOW_EXPLANATION.md  MIGRATION_LOADING_FIX.md  MIGRATION_WIZARD_COMPLETE.md  MIGRATION_WIZARD_FIXES.md  PERFORMANCE_MONITORING_IMPLEMENTATION.md  PROJECT_EXAM_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_SETUP.md  README.md  README_TESTING.md  SECURITY.md  SECURITY_FRAMEWORK_SUMMARY.md  SETUP_GUIDE.md  SHOWCASE.md  START_PLATFORM.md  TECHNICAL_INTERVIEW_GUIDE.md  alert_manager.py  analysis.md  api.py  api_docs.html  api_documentation.py  api_extensions.py  api_security.py  api_spec.json  (+81 more)
.github/workflows/: ci-cd.yml  demo-page.yml  deploy.yml
backend/: MULTI_ACCOUNT_IMPLEMENTATION_SUMMARY.md  TASKS_README.md  __init__.py  alembic.ini  celery_beat.py  celery_worker.py  check_app_startup.py  check_imports.py  finops_api.py  fix_imports_script.py  init-db.sql  init_db.py  integration_test_summary.md  main.py  monitor_tasks.py  requirements.txt  test_automation_infrastructure.py  test_compliance_integration.py  test_integration_validation.py  test_multi_account_integration.py  test_multi_account_manager.py  test_property_aggressive_mode.py  test_property_approval_workflow.py  test_property_automation_state_management.py  test_property_compliance_and_data_privacy.py  test_property_compliance_simple.py  test_property_comprehensive_audit_logging.py  test_property_comprehensive_reporting.py  test_property_dry_run_simulation.py  test_property_emergency_override_capability.py  test_property_external_integration_support.py  test_property_intelligent_action_scheduling.py  test_property_multi_account_coordination.py  test_property_multi_account_reporting_and_isolation.py  test_property_policy_configuration.py  test_property_policy_enforcement.py  test_property_production_resource_protection.py  test_property_safety_validation.py  test_property_savings_calculation_accuracy.py  test_property_storage_optimization.py  (+8 more)
backend/alembic/: env.py  script.py.mako
backend/api/: anomaly_detection.py  anomaly_detection_api.py  multi_cloud.py  multi_cloud_models.py  onboarding.py
backend/audit_logs/: audit_2025-12-16.jsonl
backend/core/: __init__.py  ab_testing_framework.py  action_engine.py  ai_assistant.py  ai_assistant_endpoints.py  ai_ml_services_endpoints.py  ai_operational_runbooks.py  ai_orchestrator.py  ai_orchestrator_endpoints.py  ai_orchestrator_models.py  ai_services_documentation.py  ai_system_monitoring.py  ai_system_monitoring_endpoints.py  ai_training_deployment_endpoints.py  alert_manager.py  anomaly_detector.py  api_call_logger.py  api_logging_endpoints.py  approval_workflow_endpoints.py  approval_workflow_engine.py  approval_workflow_integration.py  auth.py  auth_endpoints.py  auto_remediation_engine.py  automated_budget_monitor.py  automation_audit_logger.py  automation_endpoints.py  automation_models.py  aws_cost_alerts_endpoints.py  aws_cost_analyzer.py  aws_cost_endpoints.py  aws_cost_monitor.py  aws_data_service.py  aws_pricing_service.py  bias_detection_mitigation.py  budget_management_system.py  (+116 more)
cloudformation/: aws-infrastructure.yaml
dashboard/: README.md  __init__.py  api_client.py  app.py  config.py  run_dashboard.py
docs/: AWS_SETUP_GUIDE.md  DEMO.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  _config.yml
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
k8s/: ai-disaster-recovery-backup.yaml  ai-gpu-resource-management.yaml  ai-ingress-networking.yaml  ai-monitoring-observability.yaml  ai-services-autoscaling.yaml  ai-services-production-deployment.yaml  ai-training-deployment.yaml  api.yaml  configmap.yaml  dashboard.yaml  deploy-ai-services.sh  finops-production-deployment.yaml  influxdb.yaml  ingress.yaml  migration-advisor-deployment.yaml  monitoring-config.yaml  monitoring.yaml  namespace.yaml  postgres-deployment.yaml  postgres.yaml  prometheus-values.yaml  redis-deployment.yaml  redis.yaml
monitoring/: README.md  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
scripts/: add-demo-images.ps1  backup-restore.sh  deploy-production.sh  docker-health-check.sh  health-check.py  setup_finops.py  validate-production-deployment.py
terraform/: main.tf
tests/: test_basic_api.py  test_config.py  test_configuration.py  test_enhanced_models.py  test_enhanced_schedulers.py  test_enhanced_schedulers_fixed.py  test_enhanced_suite.py  test_enhanced_workload_vm.py  test_ml.py  test_performance.py  test_simulation.py  test_utils.py  test_workloads.py
(+478 files in other folders)
